--- a/sparkom-backend/package.json
+++ b/sparkom-backend/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.6",
     "mongoose": "^5.12.1",
     "multer": "^1.4.2",
     "sharp": "^0.27.2",
