--- a/sparkom-front/package.json
+++ b/sparkom-front/package.json
@@ -2,7 +2,7 @@
   "name": "sparkom-front",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3000",
+  "proxy": "https://localhost:3000",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.3",
@@ -16,14 +16,18 @@
     "bootstrap": "^4.0.0",
     "date-fns": "^2.19.0",
     "formik": "^2.2.6",
+    "mapbox-gl": "^2.2.0",
     "material-ui-phone-number": "^2.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
     "react-flip-move": "^3.0.4",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux-persist": "^6.0.0",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^1.1.1",
     "yup": "^0.32.9"
   },
