--- a/sparkom-front/package.json
+++ b/sparkom-front/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-to-print": "^2.12.4",
     "redux-persist": "^6.0.0",
     "timeago.js": "^4.0.2",
     "web-vitals": "^1.1.1",
