--- a/sparkom-backend/package.json
+++ b/sparkom-backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -17,11 +18,13 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.1",
     "multer": "^1.4.2",
+    "puppeteer": "^9.0.0",
     "sharp": "^0.27.2",
     "validator": "^13.5.2"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7"
   }
 }
