--- a/package.json
+++ b/package.json
@@ -10,17 +10,67 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "3.15.6",
+    "axios": "^0.21.1",
     "bootstrap": "^4.0.0",
+    "clsx": "1.1.0",
     "date-fns": "^2.19.0",
+    "formik": "^2.2.6",
+    "framer-motion": "1.8.4",
+    "google-map-react": "1.1.6",
+    "google-maps-react": "^2.0.2",
+    "hamburgers": "1.1.3",
+    "history": "^4.10.1",
+    "http-proxy-middleware": "^1.0.1",
+    "isotope-layout": "^3.0.6",
+    "jquery": "^3.4.1",
+    "leaflet": "^1.7.1",
+    "multiselect-react-dropdown": "^1.6.11",
+    "node-sass": "4.14.1",
+    "pe7-icon": "1.0.4",
+    "popper.js": "^1.16.0",
     "react": "^17.0.2",
+    "react-apexcharts": "1.3.6",
+    "react-bootstrap": "^1.5.2",
+    "react-circular-progressbar": "^2.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
+    "react-flag-kit": "0.3.1",
     "react-flip-move": "^3.0.4",
+    "react-history": "^0.18.2",
+    "react-images-loaded": "^2.0.0",
+    "react-ionicons": "3.1.4",
+    "react-leaflet": "^3.1.0",
     "react-modal": "^3.12.1",
+    "react-perfect-scrollbar": "1.5.8",
+    "react-player": "^1.15.2",
+    "react-plx": "^1.3.14",
+    "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^7.2.4",
+    "react-responsive-modal": "^4.0.1",
+    "react-reveal": "^1.2.2",
+    "react-router": "5.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.7.14",
+    "react-select": "^4.3.0",
+    "react-slick": "^0.25.2",
+    "react-sortable-hoc": "^2.0.0",
+    "react-stepper-horizontal": "^1.0.11",
+    "react-stickynode": "^2.1.1",
     "react-textarea-autosize": "^8.3.2",
+    "react-visibility-sensor": "^5.1.1",
+    "react-widgets": "^5.0.3",
+    "reactstrap": "^8.9.0",
+    "redux": "^4.1.0",
+    "redux-form": "^8.3.7",
+    "save": "^2.4.0",
+    "slick-carousel": "^1.8.1",
+    "source-map-explorer": "^2.1.0",
     "styled-components": "^5.2.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
