--- a/sparkom-backend/package.json
+++ b/sparkom-backend/package.json
@@ -16,10 +16,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^5.12.1",
     "multer": "^1.4.2",
     "puppeteer": "^9.0.0",
     "sharp": "^0.27.2",
+    "twilio": "^3.61.0",
     "validator": "^13.5.2"
   },
   "devDependencies": {
