--- a/sparkom-front/package.json
+++ b/sparkom-front/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "4.0.3",
     "react-to-print": "^2.12.4",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^10.16.6",
     "timeago.js": "^4.0.2",
     "web-vitals": "^1.1.1",
     "yup": "^0.32.9"
