--- a/sparkom-front/package.json
+++ b/sparkom-front/package.json
@@ -41,6 +41,7 @@
     "leaflet": "^1.7.1",
     "mapbox-gl": "^2.2.0",
     "material-ui-phone-number": "^2.2.6",
+    "moment": "^2.29.1",
     "multiselect-react-dropdown": "^1.6.11",
     "node-sass": "4.14.1",
     "pe7-icon": "1.0.4",
@@ -60,6 +61,7 @@
     "react-images-loaded": "^2.0.0",
     "react-ionicons": "3.1.4",
     "react-leaflet": "^3.1.0",
+    "react-moment": "^1.1.1",
     "react-perfect-scrollbar": "1.5.8",
     "react-player": "^1.15.2",
     "react-plx": "^1.3.14",
