--- a/sparkom-backend/package.json
+++ b/sparkom-backend/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.0",
     "puppeteer": "^9.0.0",
     "sharp": "^0.27.2",
     "validator": "^13.5.2"
