--- a/sparkom-backend/package.json
+++ b/sparkom-backend/package.json
@@ -12,32 +12,34 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "puppeteer": "^9.0.0",
-    "nodemon": "^2.0.7",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "ejc": "^1.0.4",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "formidable": "^1.2.2",
+    "googleapis": "^73.0.0",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.1",
+    "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "node-localstorage": "^2.1.6",
+    "nodemailer": "^6.6.0",
+    "nodemon": "^2.0.7",
+    "puppeteer": "^9.0.0",
     "sharp": "^0.27.2",
     "upload": "^1.1.1",
-    "validator": "^13.5.2",
-    "node-localstorage": "^2.1.6",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejc": "^1.0.4",
-    "ejs": "^3.1.6",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
