--- a/sparkom-front/package.json
+++ b/sparkom-front/package.json
@@ -23,6 +23,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@trendmicro/react-modal": "^3.1.0",
     "apexcharts": "3.15.6",
     "axios": "^0.21.1",
     "bootstrap": "^4.0.0",
@@ -52,6 +53,7 @@
     "react-circular-progressbar": "^2.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-drag-drawer": "^3.3.4",
     "react-dropzone": "^11.3.2",
     "react-facebook-login": "^4.1.1",
     "react-flag-kit": "0.3.1",
@@ -81,6 +83,7 @@
     "react-to-print": "^2.12.4",
     "react-visibility-sensor": "^5.1.1",
     "react-widgets": "^5.0.3",
+    "reactjs-popup": "^2.0.4",
     "reactstrap": "^8.9.0",
     "redux": "4.0.5",
     "redux-form": "^8.3.7",
