--- a/sparkom-front/package.json
+++ b/sparkom-front/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "https://localhost:3000",
   "dependencies": {
+    "@alan-ai/alan-sdk-web": "^1.8.26",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
@@ -31,6 +32,7 @@
     "sweetalert2": "^10.16.6",
     "timeago.js": "^4.0.2",
     "web-vitals": "^1.1.1",
+    "words-to-numbers": "^1.5.1",
     "yup": "^0.32.9"
   },
   "scripts": {
