--- a/sparkom-backend/package.json
+++ b/sparkom-backend/package.json
@@ -20,6 +20,7 @@
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.12.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.0",
     "puppeteer": "^9.0.0",
     "sharp": "^0.27.2",
     "twilio": "^3.61.0",
