--- a/sparkom-backend/package.json
+++ b/sparkom-backend/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "formidable": "^1.2.2",
@@ -25,7 +26,9 @@
     "mongoose": "^5.12.1",
     "multer": "^1.4.2",
     "sharp": "^0.27.2",
+    "socket.io": "^4.0.1",
     "upload": "^1.1.1",
+    "uuid": "^8.3.2",
     "validator": "^13.5.2"
   },
   "devDependencies": {
