--- a/sparkom-front/package.json
+++ b/sparkom-front/package.json
@@ -16,10 +16,14 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.0.0",
     "date-fns": "^2.19.0",
+    "dom-to-image": "^2.6.0",
     "formik": "^2.2.6",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.3.1",
     "mapbox-gl": "^2.2.0",
     "material-ui-phone-number": "^2.2.6",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-flip-move": "^3.0.4",
