integ syrine front

--- a/sparkom-front/package.json
+++ b/sparkom-front/package.json
@@ -32,7 +32,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-to-print": "^2.12.4",
+    "reactstrap": "^8.9.0",
+    "redux-form": "^8.3.7",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.2.3",
     "sweetalert2": "^10.16.6",
     "timeago.js": "^4.0.2",
     "web-vitals": "^1.1.1",
