--- a/sparkom-front/package.json
+++ b/sparkom-front/package.json
@@ -9,12 +9,15 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
     "@reduxjs/toolkit": "^1.5.1",
+    "@syncfusion/ej2-react-buttons": "^19.1.54",
+    "@syncfusion/ej2-react-schedule": "^19.1.59",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.0.0",
-    "date-fns": "^2.19.0",
+    "date-fns": "^2.21.1",
+    "date-fns-timezone": "^0.1.4",
     "formik": "^2.2.6",
     "mapbox-gl": "^2.2.0",
     "material-ui-phone-number": "^2.2.6",
