--- a/sparkom-backend/package.json
+++ b/sparkom-backend/package.json
@@ -16,19 +16,20 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
-    "formidable": "^1.2.2",
-    "lodash": "^4.17.21",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.12.1",
     "multer": "^1.4.2",
+    "node-localstorage": "^2.1.6",
     "nodemailer": "^6.6.0",
     "sharp": "^0.27.2",
-    "upload": "^1.1.1",
-    "node-localstorage": "^2.1.6",
     "twilio": "^3.61.0",
+    "upload": "^1.1.1",
     "validator": "^13.5.2"
   },
   "devDependencies": {
