--- a/sparkom-front/package.json
+++ b/sparkom-front/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "antd": "^4.15.4",
     "bootstrap": "^4.0.0",
     "date-fns": "^2.19.0",
     "dom-to-image": "^2.6.0",
@@ -43,6 +44,10 @@
     "redux-form": "^8.3.7",
     "redux-immutable": "^4.0.0",
     "redux-persist": "^6.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "timeago": "^1.6.7",
+    "timeago-react": "^3.0.2",
     "styled-components": "^5.2.3",
     "sweetalert2": "^10.16.6",
     "timeago.js": "^4.0.2",
