--- a/sparkom-backend/package.json
+++ b/sparkom-backend/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "helmet": "^4.6.0",
